--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/home.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/header.css" />
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="./js/script.js"></script>
 
   <title>Document</title>
@@ -52,7 +52,7 @@
   <section class="title">
     <p>Prepare yourself for battle by choosing one of these avatars!</p>
     <form action="/fortnitehome/refreshpage" method="post">
-      <button type="submit">Refresh Page</button>
+      <button type="submit"><i class="fa fa-refresh" aria-hidden="true"></i></button>
     </form>
   </section>
 
@@ -61,30 +61,34 @@
       <div class="flip-card" tabIndex="0">
         <div class="flip-card-inner">
           <!--Verandert background op basis van rarity-->
-          <% if(avatarImage[i].rarity=="epic" ) { %>
+          <% if(avatarImage[i].rarity=="EFortRarity::Epic" ) { %>
             <div class="flip-card-front" style="background: linear-gradient(to left, #c543f1, #851eae)">
-              <% } else if(avatarImage[i].rarity=="legendary" ) {%>
+              <% } else if(avatarImage[i].rarity=="EFortRarity::Legendary" ) {%>
                 <div class="flip-card-front" style="background: linear-gradient(to left, #ff8c00, #f9d005)">
-                  <% } else if(avatarImage[i].rarity=="uncommon" ) {%>
+                  <% } else if(avatarImage[i].rarity=="EFortRarity::Uncommon" ) {%>
                     <div class="flip-card-front" style="background: linear-gradient(to left, #4bd319, #14c123)">
-                      <% } else if(avatarImage[i].rarity=="common" ) {%>
+                      <% } else if(avatarImage[i].rarity=="EFortRarity::Common" ) {%>
                         <div class="flip-card-front" style="background: linear-gradient(to left, #585851, #a9a9a3)">
-                          <% } else if(avatarImage[i].rarity=="rare" ) {%>
+                          <% } else if(avatarImage[i].rarity=="EFortRarity::Rare" ) {%>
                             <div class="flip-card-front" style="background: linear-gradient(to left, #4364f7, #6fb1fc);">
+                              <% } else {%>
+                                <div class="flip-card-front" style="background: linear-gradient(to left, grey, black);">
                     <% } %>
                       <img src="<%= avatarImage[i].images %>" />
                 </div>
                 <!--Verandert background op basis van rarity-->
-                <% if(avatarImage[i].rarity=="epic" ) { %>
+                <% if(avatarImage[i].rarity=="EFortRarity::Epic" ) { %>
                   <div class="flip-card-back" style="background: linear-gradient(to left, #c543f1, #851eae)">
-                    <% } else if(avatarImage[i].rarity=="legendary" ) {%>
+                    <% } else if(avatarImage[i].rarity=="EFortRarity::Legendary" ) {%>
                       <div class="flip-card-back" style="background: linear-gradient(to left, #ff8c00, #f9d005)">
-                        <% } else if(avatarImage[i].rarity=="uncommon" ) {%>
+                        <% } else if(avatarImage[i].rarity=="EFortRarity::Uncommon" ) {%>
                           <div class="flip-card-back" style="background: linear-gradient(to left, #4bd319, #14c123)">
-                            <% } else if(avatarImage[i].rarity=="common" ) {%>
+                            <% } else if(avatarImage[i].rarity=="EFortRarity::Common" ) {%>
                               <div class="flip-card-back" style="background: linear-gradient(to left, #585851, #a9a9a3)">
-                                <% } else if(avatarImage[i].rarity=="rare" ) {%>
+                                <% } else if(avatarImage[i].rarity=="EFortRarity::Rare" ) {%>
                                   <div class="flip-card-back" style="background: linear-gradient(to left, #4364f7, #6fb1fc);">
+                                    <% } else {%>
+                                      <div class="flip-card-back" style="background: linear-gradient(to left, #4364f7, #6fb1fc);">
                           <% } %>
                   <h3 class="name">
                     <span>
@@ -99,11 +103,23 @@
                 <%= avatarImage[i].type %>
               </li>
               <li>
-                <%= avatarImage[i].rarity %>
+                <% if (avatarImage[i].rarity=="EFortRarity::Epic" ) { %>
+                  <p>Epic</p>
+                <% } else if (avatarImage[i].rarity=="EFortRarity::Legendary" ) { %>
+                  <p>Legendary</p>
+                <% } else if (avatarImage[i].rarity=="EFortRarity::Uncommon" ) { %>
+                  <p>Uncommon</p>
+                <% } else if (avatarImage[i].rarity=="EFortRarity::Common" ) { %>
+                  <p>Common</p>
+                <% } else if (avatarImage[i].rarity=="EFortRarity::Rare" ) { %>
+                  <p>Rare</p>
+                <% } %>                
               </li>
+              <% if(avatarImage[i].series){ %> 
               <li>
-                <%= avatarImage[i].series %>
+                <%= avatarImage[i].series%>
               </li>
+              <%}%>
               <article class="sterItem">
               <% if (avatarImage[i].favoriet) { %>
                 <img src="../images/ster.jpg" />
