--- a/public/css/home.css
+++ b/public/css/home.css
@@ -111,6 +111,7 @@ li {
   color: white;
   font-size: 40px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  margin-bottom: 80px;
 }
 
 .choiceIndex {
