--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,8 @@
       <span class="bar"></span>
   </label>
     <ul class="nav-list" id="navlistlogin">
-          <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+      <a class="nav-link" href="/"><li class="nav-item">Landing Page</li></a>
+      <a class="nav-link" href="/register"><li class="nav-item">Register</li></a>
     </ul>
   </nav>
   <div class="login-page">
