--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,8 +25,8 @@
       <span class="bar"></span>
     </label>
     <ul class="nav-list" id="navlistregister">
-      <li class="nav-item"><a class="nav-link" href="/">Landing Page</a></li>
-      <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+      <a class="nav-link" href="/"><li class="nav-item">Landing Page</li></a>
+      <a class="nav-link" href="/login"><li class="nav-item">Login</li></a>
     </ul>
   </nav>
   <div class="login-page">
