--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -36,24 +36,24 @@
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
-    <ul class="nav-list">
-      <% if (username) { %>
-        <li class="nav-item"><a class="nav-link" href="/">Landing Page</a></li>
-        <li class="nav-item"><a class="nav-link" href="/fortniteHome">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/favoriet">Favorieten</a></li>
-        <li class="nav-item"><a class="nav-link" href="/blacklist">Blacklists</a></li>
-        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-        <% } else { %>
-          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-          <% } %>
-    </ul>
+      <ul class="nav-list">
+        <% if (username) { %>
+          <a class="nav-link" href="/"><li class="nav-item">Landing Page</li></a>
+          <a class="nav-link" href="/fortniteHome"><li class="nav-item">Home</li></a>
+          <a class="nav-link" href="/favoriet"><li class="nav-item">Favorieten</li></a>
+          <a class="nav-link" href="/blacklist"><li class="nav-item">Blacklists</li></a>
+          <a class="nav-link" href="/logout"><li class="nav-item">Logout</li></a>
+          <% } else { %>
+            <a class="nav-link" href="/login"><li class="nav-item">Login</li></a>
+            <a class="nav-link" href="/register"><li class="nav-item">Register</li></a>
+    
+            <% } %>
+      </ul>
   </nav>
   <section class="title">
     <p>Prepare yourself for battle by choosing one of these avatars!</p>
-    <br>
     <form action="/fortnitehome/refreshpage" method="post">
-      <button type="submit"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+      <button type="submit"><i class="fa fa-refresh fa-4x" aria-hidden="true"></i></button>
     </form>
   </section>
 
