popups aangepast met geblurde achtergrond en javascript aangepast

--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -24,25 +24,9 @@ h1 {
   word-spacing: 0.25rem;
 }
 
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  transition: 200ms ease-in-out;
-  border: 1px solid black;
-  border-radius: 10px;
-  z-index: 10;
-  background-color: white;
-  width: 500px;
-  max-width: 80%;
-}
-
-.modal.active {
-  transform: translate(-50%, -50%) scale(1);
-}
-
-.modal-header {
+.title {
+  font-size: 1.25rem;
+  font-weight: bold;
   padding: 10px 15px;
   display: flex;
   justify-content: space-between;
@@ -50,12 +34,7 @@ h1 {
   border-bottom: 1px solid black;
 }
 
-.modal-header .title {
-  font-size: 1.25rem;
-  font-weight: bold;
-}
-
-.modal-header .close-button {
+.close-button {
   cursor: pointer;
   border: none;
   outline: none;
@@ -70,19 +49,30 @@ h1 {
 
 #overlay {
   position: fixed;
-  opacity: 0;
-  transition: 200ms ease-in-out;
+  display: none;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .5);
-  pointer-events: none;
+  background-color: rgba(0,0,0,0.5);
+  backdrop-filter: blur(8px);
+  z-index: 2;
 }
 
-#overlay.active {
-  opacity: 1;
-  pointer-events: all;
+div.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;;
+  transform: translate(-50%, -50%);
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 500px;
+  max-width: 80%;
 }
 
 /*------------------------------------------------------LandingPage structure---------------------------------------------------------*/
@@ -107,13 +97,13 @@ h1 {
 
 
 
-.testing button:hover {
+.testing:hover {
   background-color: brown;
   font-size: 600;
   font-weight: bold;
 }
 
-.testing button {
+.testing {
   background-color: #6fb1fc;
   padding: 10px;
   border-radius: 50px;
@@ -124,7 +114,7 @@ h1 {
   left: 44%;
 }
 
-button a {
+a {
   text-decoration: none;
 }
 
@@ -141,7 +131,7 @@ button a {
     font-size: 2rem;
   }
 
-  .testing button {
+  .testing {
     left: 43%;
   }
 }
@@ -151,7 +141,7 @@ button a {
     font-size: 1.7rem;
   }
 
-  .testing button {
+  .testing {
     left: 43%;
   }
 }
@@ -169,7 +159,7 @@ button a {
     font-size: 1.5rem;
   }
 
-  .testing button {
+  .testing {
     left: 40%;
   } 
   
@@ -204,21 +194,21 @@ button a {
     margin-bottom: 4rem;
   }
 
-  .testing button {
+  .testing  {
     left: 40%;
     font-size: 1.2rem;
   }
 }
 
 @media all and (max-width:650px){
-  .testing button {
+  .testing {
     left: 40%;
     font-size: 1.2rem;
   }
 }
 
 @media all and (max-width:600px){
-  .testing button {
+  .testing {
     left: 38%;
     font-size: 1.2rem;
   }
@@ -229,7 +219,7 @@ button a {
     font-size: 1.5rem;
   }
 
-  .testing button {
+  .testing {
     left: 35%;
     font-size: 0.9rem;
   }
@@ -240,7 +230,7 @@ button a {
     font-size: 1rem;
   }
 
-  .testing button {
+  .testing {
     left: 35%;
     font-size: 0.7rem;
   }
