--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -16,84 +16,47 @@
     <article>
       <h1>Fortnite</h1>
       <img src="../images/fortnite.jpg" />
-      <div class="testing">
-        <a href="/fortniteHome"><button>Open project</button></a>
-      </div>
+        <a href="/fortniteHome"><button class="testing">Open project</button></a>
     </article>
     <article>
       <h1>Magic the gathering</h1>
       <img src="../images/magic.jpg" />
-      <div class="testing">
-        <button data-modal-target="#modal">Open project</button>
-      </div>
-      <div class="modal" id="modal">
-        <div class="modal-header">
-          <div class="title">You shall not pass</div>
-          <button data-close-button class="close-button">&times;</button>
-        </div>
-        <div class="modal-body">
-          You don't have permission to open this project.
-        </div>
-      </div>
-      <div id="overlay"></div>
+      <button class="testing" onclick="openPopup()" >Open project</button>
     </article>
   </section>
   <section class="lp-Line1">
     <article>
       <h1>Lord of the rings</h1>
       <img src="../images/ring.jpg" />
-      <div class="testing">
-        <button data-modal-target="#modal">Open project</button>
-      </div>
-      <div class="modal" id="modal">
-        <div class="modal-header">
-          <button data-close-button class="close-button">&times;</button>
-        </div>
-      </div>
-      <div id="overlay"></div>
+      <button class="testing" onclick="openPopup()">Open project</button>
     </article>
     <article>
       <h1>Pokemon</h1>
       <img src="../images/pokemon.jpg" />
-      <div class="testing">
-        <button data-modal-target="#modal">Open project</button>
-      </div>
-      <div class="modal" id="modal">
-        <div class="modal-header">
-          <button data-close-button class="close-button">&times;</button>
-        </div>
-      </div>
-      <div id="overlay"></div>
+      <button class="testing" onclick="openPopup()">Open project</button>
     </article>
   </section>
   <section class="lp-Line1">
     <article>
       <h1>Lego Masters</h1>
       <img src="../images/lego.jpg" />
-      <div class="testing">
-        <button data-modal-target="#modal">Open project</button>
-      </div>
-      <div class="modal" id="modal">
-        <div class="modal-header">
-          <button data-close-button class="close-button">&times;</button>
-        </div>
-      </div>
-      <div id="overlay"></div>
+      <button class="testing" onclick="openPopup()">Open project</button>
     </article>
     <article>
       <h1>NBB</h1>
       <img src="../images/bank.jpg" />
-      <div class="testing">
-        <button data-modal-target="#modal">Open project</button>
-      </div>
-      <div class="modal" id="modal">
-        <div class="modal-header">
-          <button data-close-button class="close-button">&times;</button>
-        </div>
-      </div>
-      <div id="overlay"></div>
+      <button class="testing" onclick="openPopup()">Open project</button>
     </article>
   </section>
+
+  <div class="popup" id="modal">
+    <div class="title">You shall not pass<button class="close-button" onclick="closePopup()">&times;</button></div>
+    <div class="modal-body">
+      You don't have permission to open this project.
+    </div>
+  </div>
+  <div id="overlay" onclick="closePopup()"></div> 
+
 </body>
 
 </html>
