--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -1,55 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/header.ejs') %>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/reset.css" />
-  <link rel="stylesheet" href="../css/home.css">
-  <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/header.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="./js/script.js"></script>
-
-  <title>Document</title>
-</head>
-
-<body>
-
-  <section class="avatarPic">
-    <% if (avatarDb) { %>
-      <img src="<%= avatarDb %>" />
-      <h1 class="username">
-        <%=username.toUpperCase()%>
-      </h1>
-      <% } else { %>
-        <img src="../images/vraagteken.png" />
-        <h1>
-          <%=username%>
-        </h1>
-        <% } %>
-  </section>
-  <input class="inputheader" type="checkbox" id="toggle">
-  <nav>
-    <label class="navbar-toggler" for="toggle">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <ul class="nav-list">
-        <% if (username) { %>
-          <a class="nav-link" href="/"><li class="nav-item">Landing Page</li></a>
-          <a class="nav-link" href="/fortniteHome"><li class="nav-item">Home</li></a>
-          <a class="nav-link" href="/favoriet"><li class="nav-item">Favorieten</li></a>
-          <a class="nav-link" href="/blacklist"><li class="nav-item">Blacklists</li></a>
-          <a class="nav-link" href="/logout"><li class="nav-item">Logout</li></a>
-          <% } else { %>
-            <a class="nav-link" href="/login"><li class="nav-item">Login</li></a>
-            <a class="nav-link" href="/register"><li class="nav-item">Register</li></a>
-    
-            <% } %>
-      </ul>
-  </nav>
   <section class="title">
     <p>Prepare yourself for battle by choosing one of these avatars!</p>
     <form action="/fortnitehome/refreshpage" method="post">
@@ -176,6 +126,8 @@
       }
     };
   </script>
+  <script src="./js/script.js"></script>
+
   <footer>
     <section>
       <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
