--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LandingPage</title>
-  <script defer src="./js/landingpage.js"></script>
   <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="./css/popup.css">
 </head>
@@ -16,46 +15,86 @@
     <article>
       <h1>Fortnite</h1>
       <img src="../images/fortnite.jpg" />
-        <a href="/fortniteHome"><button class="testing">Open project</button></a>
+      <div class="testing">
+        <a href="/fortniteHome"><button>Open project</button></a>
+      </div>
     </article>
     <article>
       <h1>Magic the gathering</h1>
       <img src="../images/magic.jpg" />
-      <button class="testing" onclick="openPopup()" >Open project</button>
+      <div class="testing">
+        <button data-modal-target="#modal">Open project</button>
+      </div>
+      <div class="modal" id="modal">
+        <div class="modal-header">
+          <div class="title">You shall not pass</div>
+          <button data-close-button class="close-button">&times;</button>
+        </div>
+        <div class="modal-body">
+          You don't have permission to open this project.
+        </div>
+      </div>
+      <div id="overlay"></div>
     </article>
   </section>
   <section class="lp-Line1">
     <article>
       <h1>Lord of the rings</h1>
       <img src="../images/ring.jpg" />
-      <button class="testing" onclick="openPopup()">Open project</button>
+      <div class="testing">
+        <button data-modal-target="#modal">Open project</button>
+      </div>
+      <div class="modal" id="modal">
+        <div class="modal-header">
+          <button data-close-button class="close-button">&times;</button>
+        </div>
+      </div>
+      <div id="overlay"></div>
     </article>
     <article>
       <h1>Pokemon</h1>
       <img src="../images/pokemon.jpg" />
-      <button class="testing" onclick="openPopup()">Open project</button>
+      <div class="testing">
+        <button data-modal-target="#modal">Open project</button>
+      </div>
+      <div class="modal" id="modal">
+        <div class="modal-header">
+          <button data-close-button class="close-button">&times;</button>
+        </div>
+      </div>
+      <div id="overlay"></div>
     </article>
   </section>
   <section class="lp-Line1">
     <article>
       <h1>Lego Masters</h1>
       <img src="../images/lego.jpg" />
-      <button class="testing" onclick="openPopup()">Open project</button>
+      <div class="testing">
+        <button data-modal-target="#modal">Open project</button>
+      </div>
+      <div class="modal" id="modal">
+        <div class="modal-header">
+          <button data-close-button class="close-button">&times;</button>
+        </div>
+      </div>
+      <div id="overlay"></div>
     </article>
     <article>
       <h1>NBB</h1>
       <img src="../images/bank.jpg" />
-      <button class="testing" onclick="openPopup()">Open project</button>
+      <div class="testing">
+        <button data-modal-target="#modal">Open project</button>
+      </div>
+      <div class="modal" id="modal">
+        <div class="modal-header">
+          <button data-close-button class="close-button">&times;</button>
+        </div>
+      </div>
+      <div id="overlay"></div>
     </article>
   </section>
-
-  <div class="popup" id="modal">
-    <div class="title">You shall not pass<button class="close-button" onclick="closePopup()">&times;</button></div>
-    <div class="modal-body">
-      You don't have permission to open this project.
-    </div>
-  </div>
-  <div id="overlay" onclick="closePopup()"></div> 
+  
+  <script defer src="./js/landingpage.js"></script>
 
 </body>
 
