fadeIn geadd op landingpage popup, footer en header(nav) geinclude

--- a/views/favoriet.ejs
+++ b/views/favoriet.ejs
@@ -16,38 +16,8 @@
 
 <body>
 
-  <section class="avatarPic">
-    <% if (avatarDb) { %>
-      <img src="<%= avatarDb %>" />
-      <h1 class="username">
-        <%=username.toUpperCase()%>
-      </h1>
-      <% } else { %>
-        <img src="../images/vraagteken.png" />
-        <h1>
-          <%=username%>
-        </h1>
-        <% } %>
-  </section>
-  <input class="inputheader" type="checkbox" id="toggle">
-  <nav>
-    <label class="navbar-toggler" for="toggle">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-  </label>
-    <ul class="nav-list">
-      <% if (username) { %>
-        <a class="nav-link" href="/"><li class="nav-item">Landing Page</li></a>
-        <a class="nav-link" href="/fortniteHome"><li class="nav-item">Home</li></a>
-        <a class="nav-link" href="/favoriet"><li class="nav-item">Favorieten</li></a>
-        <a class="nav-link" href="/blacklist"><li class="nav-item">Blacklists</li></a>
-        <a class="nav-link" href="/logout"><li class="nav-item">Logout</li></a>
-        <% } else { %>
-          <a class="nav-link" href="/login"><li class="nav-item">Login</li></a>
-          <% } %>
-    </ul>
-  </nav>
+  <%- include('partials/header.ejs') %>
+
   <div class="charTabel">
     <section class="testing">
       <% for (let i=0; i < favoriteImages.length; i++) { %>
@@ -99,14 +69,4 @@
         <% } %>
     </section>
   </div>
-  <footer>
-    <section>
-      <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
-    </section>
-    <section>
-      <img src="../images/ap.png">
-    </section>
-  </footer>
-</body>
-
-</html>
+  <%- include('partials/footer.ejs') %>
