--- a/views/fortniteChar.ejs
+++ b/views/fortniteChar.ejs
@@ -15,38 +15,8 @@
 
 <body>
 
-  <section class="avatarPic">
-    <% if (avatarDb) { %>
-      <img src="<%= avatarDb %>" />
-      <h1 class="username">
-        <%=username.toUpperCase()%>
-      </h1>
-      <% } else { %>
-        <img src="../images/vraagteken.png" />
-        <h1>
-          <%=username%>
-        </h1>
-        <% } %>
-  </section>
-   <input class="inputheader" type="checkbox" id="toggle">
-  <nav>
-    <label class="navbar-toggler" for="toggle">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-  </label>
+  <%- include('partials/header.ejs') %>
 
-  <ul class="nav-list">
-
-      <a class="nav-link" href="/"><li class="nav-item">Landing Page</li></a>
-      <a class="nav-link" href="/fortniteHome"><li class="nav-item">Home</li></a>
-      <a class="nav-link" href="/favoriet"><li class="nav-item">Favorieten</li></a>
-      <a class="nav-link" href="/blacklist"><li class="nav-item">Blacklists</li></a>
-      <a class="nav-link" href="/logout"><li class="nav-item">Logout</li></a>
-      
-  </ul>
-  
-  </nav>
   <main>
     <h2 class="itemTopName">
       <%=character.name%>
@@ -138,14 +108,4 @@
     </section>
     </div>
   </main>
-  <footer>
-    <section>
-      <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
-    </section>
-    <section>
-      <img src="../images/ap.png">
-    </section>
-  </footer>
-</body>
-
-</html>
+  <%- include('partials/footer.ejs') %>
