--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,14 +43,4 @@
       </form>
     </div>
   </div>
-  <footer>
-    <section>
-      <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
-    </section>
-    <section>
-      <img src="../images/ap.png">
-    </section>
-  </footer>
-</body>
-
-</html>
+  <%- include('partials/footer.ejs') %>
