--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -59,8 +59,12 @@ h1 {
   background-color: rgba(0,0,0,0.5);
   backdrop-filter: blur(8px);
   z-index: 2;
+  animation: 0.75s fadeIn;
 }
-
+@keyframes fadeIn{
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
 div.popup {
   display: none;
   position: fixed;
@@ -73,6 +77,7 @@ div.popup {
   background-color: white;
   width: 500px;
   max-width: 80%;
+  animation: 2s fadeIn;
 }
 
 /*------------------------------------------------------LandingPage structure---------------------------------------------------------*/
