Refresh button op homepagina opgeknapt.

--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -20,8 +20,8 @@
   <%- include('partials/header.ejs') %>
   <section class="title">
     <p>Prepare yourself for battle by choosing one of these avatars!</p>
-    <form action="/fortnitehome/refreshpage" method="post">
-      <button type="submit"><i class="fa fa-refresh fa-4x" aria-hidden="true"></i></button>
+    <form action="/fortnitehome/refreshphow to showcase projects on dev page?age" method="post">
+      <button type="submit"><img src="images/refresh.png" alt=""></button>
     </form>
   </section>
 
