--- a/public/css/home.css
+++ b/public/css/home.css
@@ -107,6 +107,14 @@ li {
   padding-bottom: 90px;
 }
 
+.title button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+
 .title p {
   color: white;
   font-size: 40px;
