--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -20,7 +20,7 @@
   <%- include('partials/header.ejs') %>
   <section class="title">
     <p>Prepare yourself for battle by choosing one of these avatars!</p>
-    <form action="/fortnitehome/refreshphow to showcase projects on dev page?age" method="post">
+    <form action="/fortnitehome/refreshpage" method="post">
       <button type="submit"><img src="images/refresh.png" alt=""></button>
     </form>
   </section>
