refresh werkt niet

--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -21,7 +21,7 @@
   <section class="title">
     <p>Prepare yourself for battle by choosing one of these avatars!</p>
     <form action="/fortnitehome/refreshphow to showcase projects on dev page?age" method="post">
-      <button type="submit"><img src="images/refresh.png" alt=""></button>
+      <button type="submit"><img src="images/refresh.png" alt="refresh"></button>
     </form>
   </section>
 
