achterkant van flipcard op homepage de beschrijvingen beetje aangepast

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -169,6 +169,10 @@ li {
   left: 0;
 }
 
+.avatarType {
+  text-transform: capitalize;
+}
+
 /*------------------------------------------------------Media queries---------------------------------------------------------*/
 
 
