--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/header.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="./js/script.js"></script>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>Error</title>
 </head>
 
 <body>
-  <h1>Please contact us, you did somthing wrong</h1>
+  <h1>Our apologies. It looks like there was an error. Please contact the admin.</h1>
+
 </body>
 
 </html>
+<%- include('partials/footer.ejs') %>
