--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
         <% if (username) { %>
           <a class="nav-link" href="/"><li class="nav-item">Landing Page</li></a>
           <a class="nav-link" href="/fortniteHome"><li class="nav-item">Home</li></a>
-          <a class="nav-link" href="/favoriet"><li class="nav-item">Favorieten</li></a>
+          <a class="nav-link" href="/favoriet"><li class="nav-item">Favorites</li></a>
           <a class="nav-link" href="/blacklist"><li class="nav-item">Blacklists</li></a>
           <a class="nav-link" href="/logout"><li class="nav-item">Logout</li></a>
           <% } else { %>
