--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="../css/login.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/header.css" />
-
-  <title>Document</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>Register</title>
 </head>
 
 <body>
