--- a/views/favoriet.ejs
+++ b/views/favoriet.ejs
@@ -9,9 +9,8 @@
   <link rel="stylesheet" href="../css/favoriet.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/header.css" />
-
-
-  <title>Document</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>Favorite</title>
 </head>
 
 <body>
