--- a/views/fortniteChar.ejs
+++ b/views/fortniteChar.ejs
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="../css/infoPage.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/header.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>Character Page</title>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <div class="profile__details">
           <div class="infoAvatars">
             <% if(character.description){ %>
-              <p><span>description:</span>
+              <p><span>Description:</span>
                 <%= character.description %>
               </p>
               <% } %>
