--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LandingPage</title>
   <script defer src="./js/landingpage.js"></script>
   <link rel="stylesheet" href="../css/reset.css" />
   <link rel="stylesheet" href="./css/popup.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>LandingPage</title>
 </head>
 
 <body>
@@ -58,5 +59,4 @@
   <div id="overlay" onclick="closePopup()"></div> 
 
 </body>
-
 </html>
