--- a/views/error.ejs
+++ b/views/error.ejs
@@ -16,8 +16,11 @@
 </head>
 
 <body>
-  <h1>Our apologies. It looks like there was an error. Please contact the admin.</h1>
-
+  <h1>Our apologies. It looks like there was an error. Please contact one of the admins:</h1>
+  <h1>Pidiev Ramazan: ramazan.pidiev@student.ap.be</h1>
+  <h1>Bouhjar Rachad: bouhjar.rachad@student.ap.be</h1>
+  <h1>Ramoussi Sofyan: ramoussi.sofyan@student.ap.be</h1>
+  <h1>Giorgobiani Dachi: dachi.giorgobiani@student.ap.be</h1>
 </body>
 
 </html>
