typefout in error.ejs

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -18,8 +18,8 @@
 <body>
   <h1>Our apologies. It looks like there was an error. Please contact one of the admins:</h1>
   <h1>Pidiev Ramazan: ramazan.pidiev@student.ap.be</h1>
-  <h1>Bouhjar Rachad: bouhjar.rachad@student.ap.be</h1>
-  <h1>Ramoussi Sofyan: ramoussi.sofyan@student.ap.be</h1>
+  <h1>Bouhjar Rachad: rachad.bouhjar@student.ap.be</h1>
+  <h1>Ramoussi Sofyan: sofyan.ramoussi@student.ap.be</h1>
   <h1>Giorgobiani Dachi: dachi.giorgobiani@student.ap.be</h1>
 </body>
 
