--- a/views/fortniteChar.ejs
+++ b/views/fortniteChar.ejs
@@ -34,8 +34,8 @@
               </p>
               <% } %>
                 <% if(character.type){ %>
-                  <p><span>Type:</span>
-                    <%= character.type %>
+                  <p><span>Introduction:</span>
+                    <%= character.introduction %>
                   </p>
                   <% } %>
                     <% if(character.rarity){ %>
@@ -59,11 +59,11 @@
               <input type="hidden" name="name" value="<%=character.name%>">
               <input type="hidden" name="image" value="<%=character.images%>">
               <label for="wins" class="textForm"><i id="thumbs-up" class="fa fa-thumbs-up"></i></label>
-              <input type="number" id="wins" name="wins" min="0" max="5" placeholder="0" value="<%= character.wins || 0 %>">>
+              <input type="number" id="wins" name="wins" min="0" max="5" placeholder="0" value="<%= character.wins || 0 %>">
               <label for="loses" class="textForm"><i id="thumbs-down" class="fa fa-thumbs-down"></i></label>
               <input type="number" id="loses" name="loses" min="0" max="5" placeholder="0" value="<%= character.loses || 0 %>"><br><br>
               <label class="titleForm" for="notitieAvatar">Notes</label><br><br>
-              <textarea name="notitieAvatar" id="notitieAvatar" cols="30" rows="10" placeholder="<%= character.notitieAvatar %>"></textarea>></textarea><br><br>
+              <textarea name="notitieAvatar" id="notitieAvatar" cols="30" rows="10" placeholder="<%= character.notitieAvatar %>"></textarea></textarea><br><br>
               <div class="formSendButton">
                 <input type="reset" value="Reset">
                 <input type="submit" value="Submit">
