--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -108,6 +108,9 @@
                                                                           </p>
                                                                           <% } %>
                                                               </li>
+                                                              <li>
+                                                                <%= avatarImage[i].introduction %>
+                                                              </li>
                                                               <% if(avatarImage[i].series){ %>
                                                                 <li>
                                                                   <%= avatarImage[i].series%>
