--- a/views/favoriet.ejs
+++ b/views/favoriet.ejs
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/header.css" />
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-  <title>Favorite</title>
+  <title>Favourites</title>
 </head>
 
 <body>
