nog meer tweaks

--- a/views/fortniteChar.ejs
+++ b/views/fortniteChar.ejs
@@ -33,7 +33,7 @@
                 <%= character.description %>
               </p>
               <% } %>
-                <% if(character.type){ %>
+                <% if(character.introduction){ %>
                   <p><span>Introduction:</span>
                     <%= character.introduction %>
                   </p>
