--- a/views/error.ejs
+++ b/views/error.ejs
@@ -9,19 +9,22 @@
   <link rel="stylesheet" href="../css/home.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/header.css" />
+  <link rel="stylesheet" href="../css/error.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="./js/script.js"></script>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+ 
   <title>Error</title>
 </head>
 
 <body>
+  <code>
   <h1>Our apologies. It looks like there was an error. Please contact one of the admins:</h1>
   <h1>Pidiev Ramazan: ramazan.pidiev@student.ap.be</h1>
   <h1>Bouhjar Rachad: rachad.bouhjar@student.ap.be</h1>
   <h1>Ramoussi Sofyan: sofyan.ramoussi@student.ap.be</h1>
   <h1>Giorgobiani Dachi: dachi.giorgobiani@student.ap.be</h1>
+  </code>
 </body>
 
 </html>
-<%- include('partials/footer.ejs') %>
